test/libyul/yulSyntaxTests/assign_from_stack.yul
{ =: x:u256 }
// ----
// ParserError 1856: (2-3): Literal or identifier expected.
